--- a/src/output.css
+++ b/src/output.css
@@ -568,6 +568,10 @@ video {
   margin-left: 0.5rem;
 }
 
+.ml-32 {
+  margin-left: 8rem;
+}
+
 .ml-4 {
   margin-left: 1rem;
 }
@@ -614,10 +618,6 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mr-8 {
-  margin-right: 2rem;
 }
 
 .inline-block {
@@ -668,6 +668,10 @@ video {
   width: 33.333333%;
 }
 
+.w-24 {
+  width: 6rem;
+}
+
 .w-28 {
   width: 7rem;
 }
@@ -686,6 +690,10 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.cursor-trashcan {
+  cursor: url("/trash.svg"), auto;
 }
 
 .grid-cols-2 {
@@ -858,6 +866,11 @@ video {
   background-color: rgb(239 246 255 / var(--tw-bg-opacity));
 }
 
+.bg-dailySalesColor {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 181 147 / var(--tw-bg-opacity));
+}
+
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -920,11 +933,6 @@ video {
   background-color: rgb(0 196 159 / var(--tw-bg-opacity));
 }
 
-.bg-red-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
-}
-
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
@@ -933,11 +941,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-dailySalesColor {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 181 147 / var(--tw-bg-opacity));
 }
 
 .p-1 {
@@ -1084,6 +1087,11 @@ video {
   border-color: rgb(37 99 235 / var(--tw-border-opacity));
 }
 
+.hover\:border-pieBorderThree:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(254 177 11 / var(--tw-border-opacity));
+}
+
 .hover\:border-pieChartTwo:hover {
   --tw-border-opacity: 1;
   border-color: rgb(0 196 159 / var(--tw-border-opacity));
@@ -1092,6 +1100,11 @@ video {
 .hover\:bg-blue-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-pieChartThree:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 187 40 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-pieChartTwo:hover {
